[package]
name = "undine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "0.8"

[[example]]
name = "basic"

[[example]]
name = "hooks"

[[example]]
name = "parallel_metrics"

[[example]]
name = "params"
